# c_sdl_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.c
